@@ -64,6 +64,7 @@ setup(
                      'gevent-socketio >= 0.3.6',
                      'Flask-SocketIO >= 0.6.0',
                      'js.socketio < 1.0.0',
+                     'PyYAML >= 3.10',
                     ],
   #include_package_data=True,
   package_data={
