@@ -75,17 +75,6 @@ class TestNodes(TestApi):
                 res = None
             self.assertNotEqual(res, None)
 
-    def test_200_nodes_to_dict(self):
-        for node in self.network.nodes:
-            try :
-                nodes = self.network.nodes[node].to_dict()
-                self.assertEqual(type(nodes), type({}))
-                res = json.dumps(nodes)
-            except TypeError:
-                res = None
-            self.assertNotEqual(res, None)
-
-
     def test_210_controller_to_dict(self):
         try :
             nodes = self.network.controller.to_dict()
@@ -94,6 +83,16 @@ class TestNodes(TestApi):
         except TypeError:
             res = None
         self.assertNotEqual(res, None)
+
+    def test_220_nodes_groups_to_dict(self):
+        for node in self.network.nodes:
+            try :
+                groups = self.network.nodes[node].groups_to_dict()
+                self.assertEqual(type(groups), type({}))
+                res = json.dumps(groups)
+            except TypeError:
+                res = None
+            self.assertNotEqual(res, None)
 
 if __name__ == '__main__':
     sys.argv.append('-v')
