@@ -12,9 +12,14 @@ To do for python-openzwave 0.3.0-final :
      normally. But there seems to be 2 running instances of the
      network.
 
+   * When updating config.py for pyozwweb, need to python setup-
+     web.py install again ... need to change this. Add a config file.
+
 python-openzwave 0.3.0-alpha4:
    * Add pyozwman script : after installing you can launch it wit :
      Usage: ozwsh [--device=/dev/ttyUSB0] [--log=Debug] ...
+
+   * Add pyozwweb confiuration file.
 
 python-openzwave 0.3.0-alpha3:
 
